<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp">

    <LinearLayout
        android:id="@+id/layout_container_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/formula_image"
            android:layout_width="@dimen/list_item_image_size"
            android:layout_height="@dimen/list_item_image_size"
            android:contentDescription="@string/image_todo_1"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:paddingEnd="8dp">

            <TextView
                android:id="@+id/formula_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/rcylerview_baslik"
            android:textSize="@dimen/list_item_title_text"
            android:textStyle="bold" />

            <TextView
                android:id="@+id/formula_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rcylerview_alt_baslik"
                android:textSize="@dimen/list_item_body_text" />

            <TextView
                android:id="@+id/extra_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/rcylerview_aciklama"
                android:textSize="@dimen/list_item_body_text" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
