<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    app:contentInsetStart="0dp"
    app:contentInsetStartWithNavigation="0dp"
    app:contentInsetLeft="0dp"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="@dimen/toolbar_logo_size"
            android:layout_height="@dimen/toolbar_logo_size"
            android:layout_marginStart="@dimen/toolbar_logo_margin_start"
            android:layout_marginEnd="@dimen/toolbar_logo_text_gap"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_todo_2"
            android:scaleType="fitCenter"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/toolbar_baslik_default"
            android:textSize="@dimen/toolbar_title_text"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/toolbar_subtitle"
            app:layout_constraintEnd_toStartOf="@id/view_container"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/toolbar_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/toolbar_ayarlar"
            android:textSize="@dimen/toolbar_subtitle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/view_container"
            app:layout_constraintStart_toEndOf="@id/logo"
            app:layout_constraintTop_toBottomOf="@id/toolbar_title" />

        <!-- Eski tek satır ID uyumu -->
        <TextView
            android:id="@+id/text_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/view_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btn_settings"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/image_todo_3"
                android:src="@mipmap/ayarlar_011" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/image_todo_4"
                android:src="@mipmap/paylas_03" />

            <ImageButton
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/image_todo_5"
                android:src="@mipmap/anasayfa_021" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.Toolbar>
